[lesson5] Replacing ?? with help() for the proper html to show, but source is no longer shown.

--- a/dqrobotics/lesson5/lesson_dq5_robot_control_basics_part1.ipynb
+++ b/dqrobotics/lesson5/lesson_dq5_robot_control_basics_part1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,17 +156,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function __init__ in module one_dof_planar_robot:\n",
+      "\n",
+      "__init__(self, l1)\n",
+      "    Initialize self.  See help(type(self)) for accurate signature.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from one_dof_planar_robot import OneDofPlanarRobot\n",
-    "OneDofPlanarRobot.__init__??"
+    "help(OneDofPlanarRobot.__init__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,20 +283,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function ikm_tx in module one_dof_planar_robot:\n",
+      "\n",
+      "ikm_tx(self, tx)\n",
+      "    fkm calculates the IKM for the 1-DoF planar robot using the\n",
+      "    desired x-axis translation.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "OneDofPlanarRobot.ikm_tx??"
+    "help(OneDofPlanarRobot.ikm_tx)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function ikm_ty in module one_dof_planar_robot:\n",
+      "\n",
+      "ikm_ty(self, ty)\n",
+      "    fkm calculates the IKM for the 1-DoF planar robot using the\n",
+      "    desired y-axis translation.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "OneDofPlanarRobot.ikm_ty??"
+    "help(OneDofPlanarRobot.ikm_ty)"
    ]
   },
   {
@@ -297,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +370,7 @@
    "outputs": [],
    "source": [
     "# Length\n",
-    "l1 = 1;\n",
+    "l1 = 1\n",
     "\n",
     "# Create robot\n",
     "one_dof_planar_robot = OneDofPlanarRobot(l1)\n",
@@ -395,16 +433,41 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;31mSignature:\u001b[0m \u001b[0mOneDofPlanarRobot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranslation_jacobian\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtheta1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mSource:\u001b[0m   \n",
+      "    \u001b[0;32mdef\u001b[0m \u001b[0mtranslation_jacobian\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtheta1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m        \u001b[0;34m''' Calculates the translation Jacobian of the 1-DoF planar\u001b[0m\n",
+      "\u001b[0;34m           robot. '''\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m        \u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m        \u001b[0mj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ml1_\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mi_\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0msin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtheta1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mj_\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mcos\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtheta1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;34m\u001b[0m        \u001b[0;32mreturn\u001b[0m \u001b[0mvec3\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFile:\u001b[0m      ~/git/OpenExecutableBooksRobotics/dqrobotics/lesson5/one_dof_planar_robot.py\n",
+      "\u001b[0;31mType:\u001b[0m      function"
+     ]
+    }
+   ],
    "source": [
-    "OneDofPlanarRobot.translation_jacobian??"
+    "help(OneDofPlanarRobot.translation_jacobian)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Corresponding end effector velocity\n"
+     ]
+    }
+   ],
    "source": [
     "# Length\n",
     "l1 = 1\n",
@@ -426,9 +489,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t_dot = [-0.00302661 -0.35998728 -0.        ]\n"
+     ]
+    }
+   ],
    "source": [
     "t_dot = Jt*theta1_dot\n",
     "print(f\"t_dot = {t_dot}\")"
@@ -467,9 +538,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t_dot =  - 0.19i + 0.74j - 0.71k\n"
+     ]
+    }
+   ],
    "source": [
     "# Length\n",
     "l1 = 1\n",
@@ -494,9 +573,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Corresponding joint velocity\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Get the translation jacobian, based on theta\n",
@@ -508,9 +595,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "theta_dot = [-0.62168767]\n"
+     ]
+    }
+   ],
    "source": [
     "from dqrobotics.utils.DQ_LinearAlgebra import pinv\n",
     "\n",
@@ -554,9 +649,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running control loop for 251 iterations.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -600,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
