--- a/cheat_sheet.ipynb
+++ b/cheat_sheet.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,12 +30,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Macros\n",
+    "\n",
+    "$\\providecommand{\\myvec}[1]{{\\mathbf{\\boldsymbol{{#1}}}}}$\n",
+    "$\\providecommand{\\mymatrix}[1]{{\\mathbf{\\boldsymbol{{#1}}}}}$"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "\\providecommand{\\myvec}[1]{{\\mathbf{\\boldsymbol{{#1}}}}}\n",
+    "\\providecommand{\\mymatrix}[1]{{\\mathbf{\\boldsymbol{{#1}}}}}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,9 +77,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m-1       \u001b[0m \u001b[38;5;4m 1       \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m 1       \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;4m 2       \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 1       \u001b[0m  \u001b[0m\n",
+      "\n",
+      "The original SE(2) object was \n",
+      "  \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m-1       \u001b[0m \u001b[38;5;4m 1       \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m 1       \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;4m 2       \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 1       \u001b[0m  \u001b[0m\n",
+      "\n",
+      " and can be converted to: \n",
+      "\tA rotation matrix \n",
+      "[[ 6.123234e-17 -1.000000e+00]\n",
+      " [ 1.000000e+00  6.123234e-17]]\n",
+      " that has size = (2, 2).\n",
+      "\tA position vector \n",
+      "[1. 2.]\n",
+      " that has size = (2,).\n",
+      "\tA homogenous transformation matrix \n",
+      "[[ 6.123234e-17 -1.000000e+00  1.000000e+00]\n",
+      " [ 1.000000e+00  6.123234e-17  2.000000e+00]\n",
+      " [ 0.000000e+00  0.000000e+00  1.000000e+00]]\n",
+      " that has size = (3, 3).\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import spatialmath as sm\n",
@@ -91,9 +142,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m-1       \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;4m 1       \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m 1       \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;4m 2       \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m 1       \u001b[0m \u001b[38;5;4m 3       \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 1       \u001b[0m  \u001b[0m\n",
+      "\n",
+      "The original SE(2) object was \n",
+      "  \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m-1       \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;4m 1       \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m 1       \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;4m 2       \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m 0       \u001b[0m \u001b[38;5;1m 1       \u001b[0m \u001b[38;5;4m 3       \u001b[0m  \u001b[0m\n",
+      "  \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 0       \u001b[0m \u001b[38;5;244m 1       \u001b[0m  \u001b[0m\n",
+      "\n",
+      " and can be converted to: \n",
+      "\tA rotation matrix \n",
+      "[[ 6.123234e-17 -1.000000e+00  0.000000e+00]\n",
+      " [ 1.000000e+00  6.123234e-17  0.000000e+00]\n",
+      " [ 0.000000e+00  0.000000e+00  1.000000e+00]]\n",
+      " that has size = (3, 3).\n",
+      "\tA position vector \n",
+      "[1. 2. 3.]\n",
+      " that has size = (3,).\n",
+      "\tA homogenous transformation matrix \n",
+      "[[ 6.123234e-17 -1.000000e+00  0.000000e+00  1.000000e+00]\n",
+      " [ 1.000000e+00  6.123234e-17  0.000000e+00  2.000000e+00]\n",
+      " [ 0.000000e+00  0.000000e+00  1.000000e+00  3.000000e+00]\n",
+      " [ 0.000000e+00  0.000000e+00  0.000000e+00  1.000000e+00]]\n",
+      " that has size = (4, 4).\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import spatialmath as sm\n",
@@ -128,9 +212,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import spatialmath as sm\n",
@@ -149,11 +241,73 @@
     "# Compare HC.A and HC_np\n",
     "print(np.allclose(HC.A, HC_np))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you're having problems comparing matrices with \"similar\" dimesions, try to use `numpy.squeeze` when applicable. \n",
+    "\n",
+    "To understand the problem, see $\\myvec{v}_1$ and $\\myvec{v}_2$ below"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shapes are not equal, notice that in v1 we have [] and in v2 we have [[]].\n",
+      "So, v1.shape=(2,) and v2.shape=(1, 2).\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from math import pi, sin, cos\n",
+    "\n",
+    "v1 = np.array([sin(pi/2), cos(pi/2)])\n",
+    "v2 = np.array([[sin(pi/2), cos(pi/2)]])\n",
+    "\n",
+    "print(f\"Shapes are not equal, notice that in v1 we have [] and in v2 we have [[]].\")\n",
+    "print(f\"So, v1.shape={v1.shape} and v2.shape={v2.shape}.\")\n",
+    "\n",
+    "print(np.allclose(v1, v2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To compare, we do"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compare v1 and v2\n",
+    "print(np.allclose(np.squeeze(v1), np.squeeze(v2)))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
