--- a/lesson1_tutorial.ipynb
+++ b/lesson1_tutorial.ipynb
@@ -21,7 +21,7 @@
     "### I found an issue\n",
     "Thank you! Please report it at https://github.com/MarinhoLab/OpenExecutableBooksRobotics/issues\n",
     "\n",
-    "### Macros (do not touch these)"
+    "### Latex Macros"
    ]
   },
   {
@@ -47,15 +47,6 @@
     "\\providecommand{\\myvec}[1]{{\\mathbf{\\boldsymbol{{#1}}}}}\n",
     "\\providecommand{\\mymatrix}[1]{{\\mathbf{\\boldsymbol{{#1}}}}}"
    ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "vscode": {
-     "languageId": "raw"
-    }
-   },
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -803,7 +794,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
