--- a/lesson2_tutorial.ipynb
+++ b/lesson2_tutorial.ipynb
@@ -22,7 +22,7 @@
         "## I found an issue\n",
         "Thank you! Please report it at https://github.com/MarinhoLab/OpenExecutableBooksRobotics/issues\n",
         "\n",
-        "## Macros (do not touch these)"
+        "## Latex Macros"
       ]
     },
     {
@@ -697,7 +697,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.8"
+      "version": "3.12.9"
     }
   },
   "nbformat": 4,
