--- a/lesson3_tutorial.ipynb
+++ b/lesson3_tutorial.ipynb
@@ -17,7 +17,7 @@
     "## I found an issue\n",
     "Thank you! Please report it at https://github.com/MarinhoLab/OpenExecutableBooksRobotics/issues\n",
     "\n",
-    "#### Macros (do not touch these)\n",
+    "#### Latex Macros\n",
     "$\\providecommand{\\myvec}[1]{{\\mathbf{\\boldsymbol{{#1}}}}}$\n",
     "$\\providecommand{\\mymatrix}[1]{{\\mathbf{\\boldsymbol{{#1}}}}}$"
    ]
@@ -365,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
