in lesson4 we are not using spatialmath so it's removed

--- a/lesson4_tutorial.ipynb
+++ b/lesson4_tutorial.ipynb
@@ -47,15 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
     "%pip install numpy\n",
-    "%pip install numpy --break-system-packages\n",
-    "%pip install roboticstoolbox-python\n",
-    "%pip install roboticstoolbox-python --break-system-packages"
+    "%pip install numpy --break-system-packages"
    ]
   },
   {
@@ -67,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "imports"
@@ -76,7 +74,6 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import spatialmath as sm\n",
     "from math import pi, sin, cos"
    ]
   },
@@ -163,17 +160,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The analytical Jacobian at 0.7853981633974483 and 1.0471975511965976 is [[-0.23801394 -0.09659258]\n",
-      " [ 0.23801394 -0.0258819 ]\n",
-      " [ 1.          1.        ]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Sample values, the particular values do not matter\n",
     "q_0 = pi / 4\n",
@@ -209,17 +196,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "In these conditions, x_dot = [[-2.15599552]\n",
-      " [ 0.93125065]\n",
-      " [15.        ]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "q_dot = np.array(\n",
     "        [[5],\n",
