[lesson1] Added cross product example.

--- a/lesson1_tutorial.ipynb
+++ b/lesson1_tutorial.ipynb
@@ -457,6 +457,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Cross product\n",
+    "\n",
+    "Cross product is defined for vectors in $\\mathbb{R}^3$.\n",
+    "\n",
+    "For example, for \n",
+    "\n",
+    "$$\\myvec{u}_3 = \\left[\\begin{array}{ccc}\n",
+    "         1 \\\\\n",
+    "         2 \\\\\n",
+    "         3\n",
+    "        \\end{array}\\right],$$ \n",
+    "\n",
+    "and\n",
+    "\n",
+    "$$\\myvec{v}_3 = \\left[\\begin{array}{ccc}\n",
+    "         4 \\\\\n",
+    "         5 \\\\\n",
+    "         6\n",
+    "        \\end{array}\\right],$$ \n",
+    "\n",
+    "we can obtain the cross product\n",
+    "\n",
+    "$$\\myvec{c} = \\myvec{u}_3 \\times \\myvec{v}_3$$ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "u3 = np.array([[1, 2, 3]])\n",
+    "v3 = np.array([[4, 5, 6]])\n",
+    "\n",
+    "c = np.cross(u3,v3)\n",
+    "\n",
+    "print(f'c={c}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Euclidean norm\n",
     "\n",
     "$$\\myvec{c} = ||\\myvec{u}||$$ \n",
@@ -585,7 +630,7 @@
     "### Matrix multiplication\n",
     "\n",
     "For instance,\n",
-    "$$C = A.B$$\n",
+    "$$C = AB$$\n",
     "is implemented with\n",
     "\n",
     "<div class=\"alert alert-block alert-info\">\n",
@@ -612,12 +657,12 @@
    "metadata": {},
    "source": [
     "which will naturally work for the vectors we defined. For example\n",
-    "$$\\myvec{c} = \\myvec{u}.\\myvec{v} = \\left[\\begin{array}{ccc}\n",
+    "$$\\myvec{c} = \\myvec{u}\\myvec{v} = \\left[\\begin{array}{ccc}\n",
     "         1 & 2 \\\\\n",
     "         2 & 4 \n",
     "        \\end{array}\\right],\n",
     "$$\n",
-    "$$ \\myvec{d} = \\myvec{v}.\\myvec{u} = 5.\n",
+    "$$ \\myvec{d} = \\myvec{v}\\myvec{u} = 5.\n",
     "$$"
    ]
   },
