[lesson4] Removing typos mentioning l_A0 and l_A1 that no longer exist.

--- a/lesson4_tutorial.ipynb
+++ b/lesson4_tutorial.ipynb
@@ -136,8 +136,8 @@
     "We saw how to do that in class, so here is the answer:\n",
     "\n",
     "$$\\mymatrix{H}^{0}_{2} = \\left[\\begin{array}{ccc}\n",
-    "         \\cos{(q_0 + q_1)} & -\\sin{(q_0 + q_1)} & l_{A0}\\cos{q_0} + l_{A1}\\cos{(q_0 + q_1)}\\\\\n",
-    "         \\sin{(q_0 + q_1)} & \\cos{(q_0 + q_1)}  & l_{A0}\\sin{q_0} + l_{A1}\\sin{(q_0 + q_1)}\\\\\n",
+    "         \\cos{(q_0 + q_1)} & -\\sin{(q_0 + q_1)} & l_{0}\\cos{q_0} + l_{1}\\cos{(q_0 + q_1)}\\\\\n",
+    "         \\sin{(q_0 + q_1)} & \\cos{(q_0 + q_1)}  & l_{0}\\sin{q_0} + l_{1}\\sin{(q_0 + q_1)}\\\\\n",
     "         0                 & 0                  & 1\n",
     "        \\end{array}\\right].$$\n",
     "\n",
