[lesson5] Added a tutorial on kinematic control.

--- a/lesson5_tutorial.ipynb
+++ b/lesson5_tutorial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Differential Kinematics 1\n",
+    "# Kinematic Control 1\n",
     "\n",
     "*License: CC-BY-NC-SA 4.0*\n",
     "\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "tags": [
      "imports"
@@ -74,6 +74,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import spatialmath as sm\n",
     "from math import pi, sin, cos"
    ]
   },
@@ -101,7 +102,7 @@
     "         q_1\n",
     "        \\end{array}\\right].$$\n",
     "\n",
-    "1. Calculate the analytical Jacobian such that\n",
+    "and given the analytical Jacobian below\n",
     "\n",
     "$$\\dot{\\myvec{x}}=\\mymatrix{J} \\dot{\\myvec{q}}$$\n",
     "\n",
@@ -115,12 +116,7 @@
     "\n",
     "in which $p_{x}$, $p_{y}$, and $\\phi_{z}$ are, respectively, the $x$-axis position, the $y$-axis position, and the $z$-axis angle of $\\mathcal{F}_{2}$. Notice that $\\dot{l}_{0}=\\dot{l}_{1}=0$. \n",
     "\n",
-    "2. For the same values of $\\myvec{q}$, calculate $\\dot{\\myvec{x}}$ when \n",
     "\n",
-    "$$\\dot{\\myvec{q}} = \\left[\\begin{array}{ccc}\n",
-    "         5 \\\\\n",
-    "         10\n",
-    "        \\end{array}\\right].$$\n",
     "\n"
    ]
   },
@@ -128,12 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "## Step 1: Calculate the forward kinematics by hand\n",
-    "\n",
-    "It is not possible to calculate the Jacobian without first deriving the forward kinematics model (FKM). \n",
-    "\n",
-    "We saw how to do that in class, so here is the answer:\n",
+    "### Consider the forward kinematics model calculated as in the past lesson\n",
     "\n",
     "$$ \\mymatrix{H}^{0}_{2} = \\left[\\begin{array}{ccc}\n",
     "         \\cos{(q_0 + q_1)} & -\\sin{(q_0 + q_1)} & l_{0}\\cos{q_0} + l_{1}\\cos{(q_0 + q_1)}\\\\\n",
@@ -141,7 +132,41 @@
     "         0                 & 0                  & 1\n",
     "        \\end{array}\\right].$$\n",
     "\n",
-    "## Step 2: Calculate the differential kinematics by hand\n",
+    "which we turn into a function called `planar_robot_fkm` so that it can be easily reused"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def planar_robot_fkm(q: np.array) -> np.array:\n",
+    "    \"\"\"\n",
+    "    q: The configuration space values in radians.\n",
+    "    returns the x, this, the current task space value where x = [p_x p_y phi_z]^T.\n",
+    "    \"\"\"\n",
+    "    l_0: float = 0.2 # The robot parameters. They don't change in time, so they are constant here.\n",
+    "    l_1: float = 0.1\n",
+    "\n",
+    "    q_0 = q[0] # Just to make it more readable.\n",
+    "    q_1 = q[1] \n",
+    "\n",
+    "    p_x = l_0 * cos(q_0) + l_1 * cos(q_0 + q_1)\n",
+    "    p_y = l_0 * sin(q_0) + l_1 * sin(q_0 + q_1)\n",
+    "    phi_z = q_0 + q_1\n",
+    "\n",
+    "    return np.array([p_x,\n",
+    "                     p_y,\n",
+    "                     phi_z])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Consider the analytical Jacobian\n",
     "\n",
     "We first calculate the Jacobian by hand, because programatically there's nothing for you to do yet. As we did in class, here is the Jacobian\n",
     "\n",
@@ -151,74 +176,165 @@
     "         1                 & 1                  \n",
     "        \\end{array}\\right].$$\n",
     "\n",
-    "## Step 3: Calculate the Jacobian in your code\n",
-    "\n",
-    "We're now equipped to solve the first question by doing the following"
+    "We transform this Jacobian calculation into the function `planar_robot_jacobian` shown below"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sample values, the particular values do not matter\n",
-    "q_0 = pi / 4\n",
-    "q_1 = pi / 3\n",
-    "l_0 = 0.2\n",
-    "l_1 = 0.1\n",
+    "def planar_robot_jacobian(q: np.array) -> np.array: \n",
+    "    \"\"\"\n",
+    "    q: The configuration space values in radians.\n",
+    "    returns the 3x2 Jacobian mapping [q_0 q_1]^T to [px py phi_z]^T.\n",
+    "    \"\"\"\n",
+    "    l_0: float = 0.2 # The robot parameters. They don't change in time, so they are constant here.\n",
+    "    l_1: float = 0.1\n",
     "\n",
-    "# To possibly make it easier for you to read\n",
-    "J_1_1 = -l_0 * sin(q_0) - l_1 * sin(q_0 + q_1)\n",
-    "J_1_2 = -l_1 * sin(q_0  + q_1)\n",
-    "J_2_1 =  l_0 * cos(q_0) + l_1 * sin(q_0 + q_1)\n",
-    "J_2_2 =  l_1 * cos(q_0 +  q_1)\n",
-    "J_3_1 = 1\n",
-    "J_3_2 = 1\n",
+    "    q_0 = q[0] # Just to make it more readable.\n",
+    "    q_1 = q[1] \n",
     "\n",
-    "J = np.array(\n",
-    "        [[J_1_1, J_1_2],\n",
-    "         [J_2_1, J_2_2],\n",
-    "         [J_3_1, J_3_2]]\n",
-    ")\n",
+    "    J_1_1 = -l_0 * sin(q_0) - l_1 * sin(q_0 + q_1)\n",
+    "    J_1_2 = -l_1 * sin(q_0  + q_1)\n",
+    "    J_2_1 =  l_0 * cos(q_0) + l_1 * sin(q_0 + q_1)\n",
+    "    J_2_2 =  l_1 * cos(q_0 +  q_1)\n",
+    "    J_3_1 = 1\n",
+    "    J_3_2 = 1\n",
     "\n",
-    "print(f\"The analytical Jacobian at {q_0} and {q_1} is {J}\")"
+    "    return np.array(\n",
+    "                [[J_1_1, J_1_2],\n",
+    "                 [J_2_1, J_2_2],\n",
+    "                 [J_3_1, J_3_2]]\n",
+    "        )"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With the correct definition of the Jacobian as above, we can calculate the second question as "
+    "## Kinematic Control\n",
+    "\n",
+    "### 1. Define an error function\n",
+    "\n",
+    "We usually use\n",
+    "\n",
+    "$$\\tilde{\\myvec{x}}= \\myvec{x} - \\myvec{x}_d$$\n",
+    "\n",
+    "that can be implemented as the function `get_error` below"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "q_dot = np.array(\n",
-    "        [[5],\n",
-    "         [10]]\n",
-    ")\n",
-    "\n",
-    "x_dot = J @ q_dot\n",
-    "\n",
-    "print(f\"In these conditions, x_dot = {x_dot}\")"
+    "def get_error(x: np.array, xd: np.array) -> np.array:\n",
+    "    \"\"\"In this case, we use the difference as the error.\n",
+    "    x: current task-space vector.\n",
+    "    xd: desired task-space vector.\n",
+    "    \"\"\"\n",
+    "    return x - xd"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 2. Define the controller step\n",
     "\n",
+    "We resort to the following control law\n",
     "\n",
-    "# Further study\n",
+    "$$\\myvec{u} = -\\eta \\mymatrix{J}^{\\dagger}\\tilde{\\myvec{x}}$$\n",
     "\n",
-    "1. What about if the robot had 3 degrees-of-freedom, that is RRR?\n",
-    "2. What about if the robot had n degrees-of-freedom? Would it be much more complicated to solve?\n",
-    "3. What if the robot has one or more prismatic joints?"
+    "that can be easily implemented. Notice that we can resort to `np.linalg.pinv()` to perform the pseudo inversion.\n",
+    "We do so using all previous functions, combined into `planar_robot_kinematic_control_step()`.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def planar_robot_kinematic_control_step(q: np.array, xd : np.array) -> np.array:\n",
+    "    \"\"\"\n",
+    "    q: The configuration space values in radians.\n",
+    "    xd: desired task-space vector.\n",
+    "    returns 'u', the control signal to move the robot one step towards the goal.\n",
+    "    \"\"\"\n",
+    "    eta: float = 10 # This is usually a constant, so constant here\n",
+    "\n",
+    "    # Calculate task-space value, x\n",
+    "    x = planar_robot_fkm(q)\n",
+    "    # Calculate task-space error, x_tilde\n",
+    "    x_tilde = get_error(x, xd)\n",
+    "    # Get the Jacobian\n",
+    "    J = planar_robot_jacobian(q)\n",
+    "    # Invert the Jacobian, for example, with numpy's implementation of it\n",
+    "    J_inv = np.linalg.pinv(J)\n",
+    "\n",
+    "    return -eta * J_inv @ x_tilde"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Finally, the control loop\n",
+    "\n",
+    "The idea here is to show that the norm of the error decreases with the control action. The desired task space vector will not always be achievable. Nonetheless, we can show, as below, that the control action reduces the task-space error, $\\tilde{\\myvec{x}}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xd = [0.1        0.1        0.31415927]\n",
+      "initial q = [0. 0.]\n",
+      "initial x = [0.3 0.  0. ]\n",
+      "initial x_tilde_norm = 0.38561126022315995\n",
+      "final q = [ 2.03725132 -1.73623356]\n",
+      "final x = [0.00555896 0.20828287 0.30101777]\n",
+      "final x_tilde = 0.14428094004856512\n"
+     ]
+    }
+   ],
+   "source": [
+    "# A desired task-space value, defined by the problem at hand\n",
+    "xd = np.array([0.1,0.1,pi/10])\n",
+    "print(f\"xd = {xd}\")\n",
+    "\n",
+    "# Define initial values for the joint positions\n",
+    "q_0 = 0.0\n",
+    "q_1 = 0.0\n",
+    "q = np.array([q_0,q_1])\n",
+    "\n",
+    "# Define a stop criteria, in this case let's control for 10 seconds\n",
+    "t:float = 0 # Current time\n",
+    "T:float = 0.001 # Sampling time\n",
+    "\n",
+    "print(f\"initial q = {q}\")\n",
+    "x = planar_robot_fkm(q)\n",
+    "print(f\"initial x = {x}\")\n",
+    "print(f\"initial x_tilde_norm = {np.linalg.norm(get_error(x, xd))}\")\n",
+    "\n",
+    "while t < 10:\n",
+    "    u = planar_robot_kinematic_control_step(q, xd)\n",
+    "    q = q + u * T # Update law using the sampling time\n",
+    "    t = t + T\n",
+    "    \n",
+    "print(f\"final q = {q}\")\n",
+    "x = planar_robot_fkm(q)\n",
+    "print(f\"final x = {planar_robot_fkm(q)}\")\n",
+    "print(f\"final x_tilde_norm = {np.linalg.norm(get_error(x, xd))}\")"
    ]
   }
  ],
