--- a/lesson5_tutorial.ipynb
+++ b/lesson5_tutorial.ipynb
@@ -321,20 +321,20 @@
     "t:float = 0 # Current time\n",
     "T:float = 0.001 # Sampling time\n",
     "\n",
-    "print(f\"initial q = {q}\")\n",
+    "print(f\"Initial: q = {q}\")\n",
     "x = planar_robot_fkm(q)\n",
-    "print(f\"initial x = {x}\")\n",
-    "print(f\"initial x_tilde_norm = {np.linalg.norm(get_error(x, xd))}\")\n",
+    "print(f\"Initial: x = {x}\")\n",
+    "print(f\"Initial: x_tilde_norm = {np.linalg.norm(get_error(x, xd))}\")\n",
     "\n",
     "while t < 10:\n",
     "    u = planar_robot_kinematic_control_step(q, xd)\n",
     "    q = q + u * T # Update law using the sampling time\n",
     "    t = t + T\n",
     "    \n",
-    "print(f\"final q = {q}\")\n",
+    "print(f\"Final: q = {q}\")\n",
     "x = planar_robot_fkm(q)\n",
-    "print(f\"final x = {planar_robot_fkm(q)}\")\n",
-    "print(f\"final x_tilde_norm = {np.linalg.norm(get_error(x, xd))}\")"
+    "print(f\"Final: x = {planar_robot_fkm(q)}\")\n",
+    "print(f\"Final: x_tilde_norm = {np.linalg.norm(get_error(x, xd))}\")"
    ]
   }
  ],
