Additional context to lesson 4, fixed import in lesson 5

--- a/lesson5_tutorial.ipynb
+++ b/lesson5_tutorial.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "## Pre-requisites\n",
     "The user of this notebook is expected to have prior knowledge in\n",
-    "- All the content and pre-requisites of lessons 1, 2, and 3.\n",
+    "- All the content and pre-requisites of lessons 1, 2, 3, and 4.\n",
     "\n",
     "## I found an issue\n",
     "Thank you! Please report it at https://github.com/MarinhoLab/OpenExecutableBooksRobotics/issues\n",
@@ -47,13 +47,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
     "%pip install numpy\n",
-    "%pip install numpy --break-system-packages"
+    "%pip install numpy --break-system-packages\n",
+    "%pip install roboticstoolbox-python\n",
+    "%pip install roboticstoolbox-python --break-system-packages"
    ]
   },
   {
@@ -65,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "imports"
@@ -76,6 +78,16 @@
     "import numpy as np\n",
     "import spatialmath as sm\n",
     "from math import pi, sin, cos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Suggested exercises\n",
+    "- Try to modify the code below to calculate the control action for a:\n",
+    "1. PP robot\n",
+    "2. RP robot"
    ]
   },
   {
@@ -114,10 +126,7 @@
     "         \\phi_{z}\n",
     "        \\end{array}\\right],$$\n",
     "\n",
-    "in which $p_{x}$, $p_{y}$, and $\\phi_{z}$ are, respectively, the $x$-axis position, the $y$-axis position, and the $z$-axis angle of $\\mathcal{F}_{2}$. Notice that $\\dot{l}_{0}=\\dot{l}_{1}=0$. \n",
-    "\n",
-    "\n",
-    "\n"
+    "in which $p_{x}$, $p_{y}$, and $\\phi_{z}$ are, respectively, the $x$-axis position, the $y$-axis position, and the $z$-axis angle of $\\mathcal{F}_{2}$. Notice that $\\dot{l}_{0}=\\dot{l}_{1}=0$. "
    ]
   },
   {
@@ -137,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,21 +301,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "xd = [0.1        0.1        0.31415927]\n",
-      "initial q = [0. 0.]\n",
-      "initial x = [0.3 0.  0. ]\n",
-      "initial x_tilde_norm = 0.38561126022315995\n",
-      "final q = [ 2.03725132 -1.73623356]\n",
-      "final x = [0.00555896 0.20828287 0.30101777]\n",
-      "final x_tilde = 0.14428094004856512\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# A desired task-space value, defined by the problem at hand\n",
     "xd = np.array([0.1,0.1,pi/10])\n",
