--- a/lesson4_tutorial.ipynb
+++ b/lesson4_tutorial.ipynb
@@ -141,9 +141,35 @@
     "         0                 & 0                  & 1\n",
     "        \\end{array}\\right].$$\n",
     "\n",
+    "This means that, from inspection,\n",
+    "\n",
+    "$$p_{x}=l_{0}\\cos{q_0} + l_{1}\\cos{(q_0 + q_1)}$$\n",
+    "$$p_{y}=l_{0}\\sin{q_0} + l_{1}\\sin{(q_0 + q_1)}$$\n",
+    "$$\\phi_{z}=q_0 + q_1$$\n",
+    "        \n",
+    "\n",
     "## Step 2: Calculate the differential kinematics by hand\n",
     "\n",
-    "We first calculate the Jacobian by hand, because programatically there's nothing for you to do yet. As we did in class, here is the Jacobian\n",
+    "We first calculate the Jacobian by hand, because programatically there's nothing for you to do yet. \n",
+    "\n",
+    "The analytical Jacobian is given by\n",
+    "\n",
+    "$$\\mymatrix{J} = \\left[\\begin{array}{ccc}\n",
+    "         \\frac{\\partial p_{x}}{q_0}    & \\frac{\\partial p_{x}}{q_1} \\\\\n",
+    "         \\frac{\\partial p_{y}}{q_0}    & \\frac{\\partial p_{y}}{q_1}  \\\\\n",
+    "         \\frac{\\partial \\phi_{z}}{q_0} & \\frac{\\partial \\phi_{z}}{q_1}                  \n",
+    "        \\end{array}\\right].$$\n",
+    "\n",
+    "As we did in class, we find each element by calculating the partial derivative of the respective task-space value with respect to the configuration-space value\n",
+    "\n",
+    "$$\\frac{\\partial p_{x}}{q_0}=-l_{0}\\sin{q_0} - l_{1}\\sin{(q_0 + q_1)}$$\n",
+    "$$\\frac{\\partial p_{x}}{q_1}=-l_{1}\\sin{(q_0 + q_1)}$$\n",
+    "$$\\frac{\\partial p_{y}}{q_0}=l_{0}\\cos{q_0} + l_{1}\\cos{(q_0 + q_1)}$$   \n",
+    "$$\\frac{\\partial p_{y}}{q_1}=l_{1}\\cos{(q_0 + q_1)}$$ \n",
+    "$$\\frac{\\partial \\phi_{z}}{q_0}=1$$ \n",
+    "$$\\frac{\\partial \\phi_{z}}{q_1}=1$$                \n",
+    "        \n",
+    "resulting in\n",
     "\n",
     "$$\\mymatrix{J} = \\left[\\begin{array}{ccc}\n",
     "         -l_{0}\\sin{q_0} - l_{1}\\sin{(q_0 + q_1)} & -l_{1}\\sin{(q_0 + q_1)} \\\\\n",
