--- a/lesson4_tutorial.ipynb
+++ b/lesson4_tutorial.ipynb
@@ -135,7 +135,7 @@
     "\n",
     "We saw how to do that in class, so here is the answer:\n",
     "\n",
-    "$$ \\mymatrix{H}^{0}_{2} = \\left[\\begin{array}{ccc}\n",
+    "$$\\mymatrix{H}^{0}_{2} = \\left[\\begin{array}{ccc}\n",
     "         \\cos{(q_0 + q_1)} & -\\sin{(q_0 + q_1)} & l_{0}\\cos{q_0} + l_{1}\\cos{(q_0 + q_1)}\\\\\n",
     "         \\sin{(q_0 + q_1)} & \\cos{(q_0 + q_1)}  & l_{0}\\sin{q_0} + l_{1}\\sin{(q_0 + q_1)}\\\\\n",
     "         0                 & 0                  & 1\n",
@@ -197,7 +197,7 @@
     "# To possibly make it easier for you to read\n",
     "J_1_1 = -l_0 * sin(q_0) - l_1 * sin(q_0 + q_1)\n",
     "J_1_2 = -l_1 * sin(q_0  + q_1)\n",
-    "J_2_1 =  l_0 * cos(q_0) + l_1 * sin(q_0 + q_1)\n",
+    "J_2_1 =  l_0 * cos(q_0) + l_1 * cos(q_0 + q_1)\n",
     "J_2_2 =  l_1 * cos(q_0 +  q_1)\n",
     "J_3_1 = 1\n",
     "J_3_2 = 1\n",
