[lesson5] Added more information about the initial values of the variables for the controller.

--- a/lesson5_tutorial.ipynb
+++ b/lesson5_tutorial.ipynb
@@ -273,12 +273,12 @@
     "\n",
     "For the control loop itself, we use all previous functions. The idea here is to show that the norm of the error decreases with the control action. The desired task space vector will not always be achievable. Nonetheless, we can show, as below, that the control action reduces the task-space error, $\\tilde{\\myvec{x}}$.\n",
     "\n",
-    "Let $\\eta=0.5$ be the controller gain and $T=0.001$ be the sampling time. In addition, let the manipulator start at $t=0$ with $q_0=q_1=0$.\n"
+    "Let $\\eta=0.5$ be the controller gain, $T=0.001$ be the sampling time, and $\\myvec{x}_d=\\left[\\begin{array}{ccc} 0.1 & 0.1 & \\frac{\\pi}{10} \\end{array}\\right]^T$. In addition, let the manipulator start at $t=0$ with $q_0=q_1=0$.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -297,9 +297,10 @@
     "q_1 = 0.0\n",
     "q = np.array([q_0,q_1])\n",
     "\n",
-    "\n",
     "# A desired task-space value, defined by the problem at hand\n",
-    "xd = np.array([0.1,0.1,pi/10])\n",
+    "xd = np.array([0.1,\n",
+    "               0.1,\n",
+    "               pi/10])\n",
     "print(f\"xd = {xd}\")\n",
     "\n",
     "# Define a stop criteria, in this case let's control for 10 seconds\n",
@@ -403,7 +404,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "with that, our controller becomes"
+    "with that, our controller becomes, changing only the inversion strategy,"
    ]
   },
   {
@@ -437,9 +438,10 @@
     "q_1 = 0.0\n",
     "q = np.array([q_0,q_1])\n",
     "\n",
-    "\n",
     "# A desired task-space value, defined by the problem at hand\n",
-    "xd = np.array([0.1,0.1,pi/10])\n",
+    "xd = np.array([0.1,\n",
+    "               0.1,\n",
+    "               pi/10])\n",
     "print(f\"xd = {xd}\")\n",
     "\n",
     "# Define a stop criteria, in this case let's control for 10 seconds\n",
