[Lessons4/5] Adjusting equation alignment.

--- a/lesson4_tutorial.ipynb
+++ b/lesson4_tutorial.ipynb
@@ -143,9 +143,11 @@
     "\n",
     "This means that, from inspection,\n",
     "\n",
-    "$$p_{x}=l_{0}\\cos{q_0} + l_{1}\\cos{(q_0 + q_1)}$$\n",
-    "$$p_{y}=l_{0}\\sin{q_0} + l_{1}\\sin{(q_0 + q_1)}$$\n",
-    "$$\\phi_{z}=q_0 + q_1$$\n",
+    "$$\\begin{align}\n",
+    "p_{x}&=l_{0}\\cos{q_0} + l_{1}\\cos{(q_0 + q_1)} \\\\\n",
+    "p_{y}&=l_{0}\\sin{q_0} + l_{1}\\sin{(q_0 + q_1)} \\\\\n",
+    "\\phi_{z}&=q_0 + q_1 \\\\\n",
+    "\\end{align}$$\n",
     "        \n",
     "\n",
     "## Step 2: Calculate the differential kinematics by hand\n",
@@ -154,7 +156,7 @@
     "\n",
     "The analytical Jacobian is given by\n",
     "\n",
-    "$$\\mymatrix{J} = \\left[\\begin{array}{ccc}\n",
+    "$$ \\mymatrix{J} = \\left[\\begin{array}{ccc}\n",
     "         \\frac{\\partial p_{x}}{q_0}    & \\frac{\\partial p_{x}}{q_1} \\\\\n",
     "         \\frac{\\partial p_{y}}{q_0}    & \\frac{\\partial p_{y}}{q_1}  \\\\\n",
     "         \\frac{\\partial \\phi_{z}}{q_0} & \\frac{\\partial \\phi_{z}}{q_1}                  \n",
@@ -162,12 +164,14 @@
     "\n",
     "As we did in class, we find each element by calculating the partial derivative of the respective task-space value with respect to the configuration-space value\n",
     "\n",
-    "$$\\frac{\\partial p_{x}}{q_0}=-l_{0}\\sin{q_0} - l_{1}\\sin{(q_0 + q_1)}$$\n",
-    "$$\\frac{\\partial p_{x}}{q_1}=-l_{1}\\sin{(q_0 + q_1)}$$\n",
-    "$$\\frac{\\partial p_{y}}{q_0}=l_{0}\\cos{q_0} + l_{1}\\cos{(q_0 + q_1)}$$   \n",
-    "$$\\frac{\\partial p_{y}}{q_1}=l_{1}\\cos{(q_0 + q_1)}$$ \n",
-    "$$\\frac{\\partial \\phi_{z}}{q_0}=1$$ \n",
-    "$$\\frac{\\partial \\phi_{z}}{q_1}=1$$                \n",
+    "$$\\begin{align}\n",
+    "\\frac{\\partial p_{x}}{q_0} &= -l_{0}\\sin{q_0} - l_{1}\\sin{(q_0 + q_1)} \\\\\n",
+    "\\frac{\\partial p_{x}}{q_1} &= -l_{1}\\sin{(q_0 + q_1)} \\\\\n",
+    "\\frac{\\partial p_{y}}{q_0} &= l_{0}\\cos{q_0} + l_{1}\\cos{(q_0 + q_1)} \\\\\n",
+    "\\frac{\\partial p_{y}}{q_1} &= l_{1}\\cos{(q_0 + q_1)} \\\\\n",
+    "\\frac{\\partial \\phi_{z}}{q_0} &= 1 \\\\\n",
+    "\\frac{\\partial \\phi_{z}}{q_1} &= 1 \n",
+    "\\end{align}$$\n",
     "        \n",
     "resulting in\n",
     "\n",
