[lesson4/5] Fixing titles and making chapters more uniform.

--- a/lesson4_tutorial.ipynb
+++ b/lesson4_tutorial.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Differential Kinematics 1\n",
+    "# Differential Kinematics\n",
     "\n",
     "*License: CC-BY-NC-SA 4.0*\n",
     "\n",
     "*Author: Murilo M. Marinho (murilo.marinho@manchester.ac.uk)*\n",
     "\n",
-    "## Pre-requisites\n",
+    "## Pre-requisites for the leaner\n",
     "The user of this notebook is expected to have prior knowledge in\n",
     "- All the content and pre-requisites of lessons 1, 2, and 3.\n",
     "\n",
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pre-requisites"
+    "# Package installation"
    ]
   },
   {
@@ -75,6 +75,17 @@
    "source": [
     "import numpy as np\n",
     "from math import pi, sin, cos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Suggested exercises\n",
+    "\n",
+    "1. What about if the robot had 3 degrees-of-freedom, that is RRR?\n",
+    "2. What about if the robot had n degrees-of-freedom? Would it be much more complicated to solve?\n",
+    "3. What if the robot has one or more prismatic joints?"
    ]
   },
   {
@@ -146,7 +157,7 @@
     "$$\\begin{align}\n",
     "p_{x}&=l_{0}\\cos{q_0} + l_{1}\\cos{(q_0 + q_1)} \\\\\n",
     "p_{y}&=l_{0}\\sin{q_0} + l_{1}\\sin{(q_0 + q_1)} \\\\\n",
-    "\\phi_{z}&=q_0 + q_1 \\\\\n",
+    "\\phi_{z}&=q_0 + q_1 .\\\\\n",
     "\\end{align}$$\n",
     "        \n",
     "\n",
@@ -236,19 +247,6 @@
     "x_dot = J @ q_dot\n",
     "\n",
     "print(f\"In these conditions, x_dot = {x_dot}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "\n",
-    "# Further study\n",
-    "\n",
-    "1. What about if the robot had 3 degrees-of-freedom, that is RRR?\n",
-    "2. What about if the robot had n degrees-of-freedom? Would it be much more complicated to solve?\n",
-    "3. What if the robot has one or more prismatic joints?"
    ]
   }
  ],
