[lesson4_tutorial] Added the missing `\\partial`.

--- a/lesson4_tutorial.ipynb
+++ b/lesson4_tutorial.ipynb
@@ -168,9 +168,9 @@
     "The analytical Jacobian is given by\n",
     "\n",
     "$$ \\mymatrix{J} = \\left[\\begin{array}{ccc}\n",
-    "         \\frac{\\partial p_{x}}{q_0}    & \\frac{\\partial p_{x}}{q_1} \\\\\n",
-    "         \\frac{\\partial p_{y}}{q_0}    & \\frac{\\partial p_{y}}{q_1}  \\\\\n",
-    "         \\frac{\\partial \\phi_{z}}{q_0} & \\frac{\\partial \\phi_{z}}{q_1}                  \n",
+    "         \\frac{\\partial p_{x}}{\\partial q_0}    & \\frac{\\partial p_{x}}{\\partial q_1} \\\\\n",
+    "         \\frac{\\partial p_{y}}{\\partial q_0}    & \\frac{\\partial p_{y}}{\\partial q_1}  \\\\\n",
+    "         \\frac{\\partial \\phi_{z}}{\\partial q_0} & \\frac{\\partial \\phi_{z}}{\\partial q_1}                  \n",
     "        \\end{array}\\right].$$\n",
     "\n",
     "As we did in class, we find each element by calculating the partial derivative of the respective task-space value with respect to the configuration-space value\n",
