--- a/lesson4_tutorial.ipynb
+++ b/lesson4_tutorial.ipynb
@@ -176,12 +176,12 @@
     "As we did in class, we find each element by calculating the partial derivative of the respective task-space value with respect to the configuration-space value\n",
     "\n",
     "$$\\begin{align}\n",
-    "\\frac{\\partial p_{x}}{q_0} &= -l_{0}\\sin{q_0} - l_{1}\\sin{(q_0 + q_1)} \\\\\n",
-    "\\frac{\\partial p_{x}}{q_1} &= -l_{1}\\sin{(q_0 + q_1)} \\\\\n",
-    "\\frac{\\partial p_{y}}{q_0} &= l_{0}\\cos{q_0} + l_{1}\\cos{(q_0 + q_1)} \\\\\n",
-    "\\frac{\\partial p_{y}}{q_1} &= l_{1}\\cos{(q_0 + q_1)} \\\\\n",
-    "\\frac{\\partial \\phi_{z}}{q_0} &= 1 \\\\\n",
-    "\\frac{\\partial \\phi_{z}}{q_1} &= 1 \n",
+    "\\frac{\\partial p_{x}}{\\partial q_0} &= -l_{0}\\sin{q_0} - l_{1}\\sin{(q_0 + q_1)} \\\\\n",
+    "\\frac{\\partial p_{x}}{\\partial q_1} &= -l_{1}\\sin{(q_0 + q_1)} \\\\\n",
+    "\\frac{\\partial p_{y}}{\\partial q_0} &= l_{0}\\cos{q_0} + l_{1}\\cos{(q_0 + q_1)} \\\\\n",
+    "\\frac{\\partial p_{y}}{\\partial q_1} &= l_{1}\\cos{(q_0 + q_1)} \\\\\n",
+    "\\frac{\\partial \\phi_{z}}{\\partial q_0} &= 1 \\\\\n",
+    "\\frac{\\partial \\phi_{z}}{\\partial q_1} &= 1 \n",
     "\\end{align}$$\n",
     "        \n",
     "resulting in\n",
