[lesson4] Typo from leaner to learner.

--- a/lesson4_tutorial.ipynb
+++ b/lesson4_tutorial.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "*Author: Murilo M. Marinho (murilo.marinho@manchester.ac.uk)*\n",
     "\n",
-    "## Pre-requisites for the leaner\n",
+    "## Pre-requisites for the learner\n",
     "The user of this notebook is expected to have prior knowledge in\n",
     "- All the content and pre-requisites of lessons 1, 2, and 3.\n",
     "\n",
