[lesson5] Additional explanation about the FKM

--- a/lesson5_tutorial.ipynb
+++ b/lesson5_tutorial.ipynb
@@ -656,7 +656,23 @@
     "         0                 & 0                  & 1\n",
     "        \\end{array}\\right].$$\n",
     "\n",
-    "Equivalent to"
+    "Because this robot is planar, the following task space is necessary and sufficient to fully describe the reacheable space\n",
+    "\n",
+    "$$\\myvec{x} = \\left[\\begin{array}{ccc}\n",
+    "         p_{x} \\\\\n",
+    "         p_{y} \\\\\n",
+    "         \\phi_{z}\n",
+    "        \\end{array}\\right].$$\n",
+    "\n",
+    "The values can be obtained from inspection of $\\mymatrix{H}^{0}_{3}(q_0,q_1,q_2)$,\n",
+    "\n",
+    "$$\\begin{align*}\n",
+    "p_{x} & = (l_0 + q_0) + l_{1}c_{1} + l_{2}c_{12} \\\\\n",
+    "p_{y} & = l_{1}s_{1} + l_{2}s_{12} \\\\\n",
+    "\\phi_{z} & = q_1 + q_2,\n",
+    "\\end{align*}$$\n",
+    "\n",
+    "which means that the FKM, $\\myvec{x}=f(\\myvec{q})$, in this case is equivalent to"
    ]
   },
   {
