[lesson5] Added subsections to PRR.

--- a/lesson5_tutorial.ipynb
+++ b/lesson5_tutorial.ipynb
@@ -648,6 +648,8 @@
     "\n",
     "And link lenghts $l_{0}, l_{1}, l_{2}\\in \\mathbb{R}$.\n",
     "\n",
+    "## Task Space & Forward Kinematics Model (FKM)\n",
+    "\n",
     "Let $s_1 \\triangleq \\sin{q_1}$, $s_{12} \\triangleq \\sin{(q_1 + q_2)}$, $c_1 \\triangleq \\cos{q_1}$, and $c_{12} \\triangleq \\cos{(q_1 + q_2)}$. The forward kinematics of this manipulator is therefore given by\n",
     "\n",
     "$$ SE(2) \\ni \\mymatrix{H}^{0}_{3}(q_0,q_1,q_2) = \\left[\\begin{array}{ccc}\n",
@@ -713,6 +715,8 @@
    "metadata": {},
    "source": [
     "\n",
+    "## Analytical Jacobian\n",
+    "\n",
     "The analytical Jacobian is\n",
     "\n",
     "$$ \\mymatrix{J}_C(q_0,q_1,q_2) = \\left[\\begin{array}{ccc}\n",
@@ -769,6 +773,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Kinematic Control\n",
+    "\n",
     "With this, a similar control as before, but changing the FKM and Jacobian can be easily achieved. We change only \n",
     "1. The configuration space in lines 20 to 25.\n",
     "2. `planar_robot_prr_fkm` in line 33\n",
