--- a/lesson5_tutorial.ipynb
+++ b/lesson5_tutorial.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "imports"
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,16 @@
     "\n",
     "## Task Space & Forward Kinematics Model (FKM)\n",
     "\n",
-    "Let $s_1 \\triangleq \\sin{q_1}$, $s_{12} \\triangleq \\sin{(q_1 + q_2)}$, $c_1 \\triangleq \\cos{q_1}$, and $c_{12} \\triangleq \\cos{(q_1 + q_2)}$. The forward kinematics of this manipulator is therefore given by\n",
+    "Let \n",
+    "\n",
+    "$$\\begin{align*}\n",
+    "s_1    & \\triangleq \\sin{q_1} \\\\\n",
+    "s_{12} & \\triangleq \\sin{(q_1 + q_2)} \\\\\n",
+    "c_1    & \\triangleq \\cos{q_1} \\\\\n",
+    "c_{12} & \\triangleq \\cos{(q_1 + q_2)}.\n",
+    "\\end{align*}$$\n",
+    "\n",
+    "The forward kinematics of this manipulator is therefore given by\n",
     "\n",
     "$$ SE(2) \\ni \\mymatrix{H}^{0}_{3}(q_0,q_1,q_2) = \\left[\\begin{array}{ccc}\n",
     "         c_{12} & -s_{12} & (l_0 + q_0) + l_{1}c_{1} + l_{2}c_{12}\\\\\n",
@@ -679,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
